--- a/app/src/main/res/layout/activity_wallet_detail.xml
+++ b/app/src/main/res/layout/activity_wallet_detail.xml
@@ -124,8 +124,9 @@
 
                 <TextView
                     android:id="@+id/addToCart"
-                    android:layout_width="424dp"
-                    android:layout_height="64dp"
+                    android:layout_width="415dp"
+                    android:layout_height="76dp"
+                    android:layout_marginTop="268dp"
                     android:layout_weight="1"
                     android:background="@drawable/black_button"
                     android:gravity="center"
@@ -135,10 +136,9 @@
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintTop_toTopOf="@+id/linearLayout"
+                    app:layout_constraintVertical_bias="0.02" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
